--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<h6>  this is <br> h6 </h6>
 		<a href="my info.html" target="_blank"> This is a link </a>
 		<br>
-		<img src="imgss/coding.jpg" width="100" height="100" alt="coding omg"> 
+		<img src="imgs/coding.jpg" width="100" height="100" alt="coding omg"> 
 		<ul>
 			<li>CS</li>
 			<li> English</li>
